# src/functions/app.py
@@ -5,6 +5,9 @@ from flask import Flask, jsonify, make_response, request
 from src.utils.response_builder import ResponseBuilder
 from src.utils.validation import Validation
 from src.services.users import UserService
+from src.services.operations import OperationsService
+from src.middleware.token_required import token_required
+from src.middleware.api_key_required import api_key_required
 
 app = Flask(__name__)
 app.json.sort_keys = False
@@ -21,28 +24,12 @@ if os.environ.get('IS_OFFLINE'):
     dynamodb_client = boto3.client(
         'dynamodb', region_name='localhost', endpoint_url='http://localhost:8000'
     )
-
-USERS_TABLE = os.environ['USERS_TABLE']
 response_builder = ResponseBuilder(request)
 
 
 @app.route('/api/v1/')
 def index():
     return 'Welcome to Calc'
-
-
-@app.route('/api/v1/users/<string:user_id>')
-def get_user(user_id):
-    result = dynamodb_client.get_item(
-        TableName=USERS_TABLE, Key={'userId': {'S': user_id}}
-    )
-    item = result.get('Item')
-    if not item:
-        return jsonify({'error': 'Could not find user with provided "userId"'}), 404
-
-    return jsonify(
-        {'userId': item.get('userId').get('S'), 'name': item.get('name').get('S')}
-    )
 
 
 @app.route('/api/v1/users', methods=['POST'])
@@ -77,7 +64,7 @@ def get_auth():
     try:
         resp = service.login_attempt(body, os.getenv('user_pool_id'), os.getenv('client_id'))
         return response_builder.login_success(
-            resp['AuthenticationResult']['IdToken'],
+            resp['AuthenticationResult']['AccessToken'],
             resp['AuthenticationResult']['ExpiresIn'])
     except service.client.exceptions.NotAuthorizedException:
         return response_builder.invalid_credentials()
@@ -85,6 +72,28 @@ def get_auth():
         return response_builder.server_error(e, os.getenv('FLASK_ENV'))
 
 
+@app.route('/api/v1/operations')
+@api_key_required
+@token_required
+def get_operations(current_user):
+    service = OperationsService()
+    operations = service.get_operations()
+    return response_builder.operation_list(operations)
+
+
 @app.errorhandler(404)
 def resource_not_found(e):
     return response_builder.not_found('Path not found in API')
+
+
+@app.errorhandler(401)
+def unauthorized(e):
+    return response_builder.no_token_response()
+
+
+@app.errorhandler(403)
+def invalid_token(e):
+    if e.description == 'INVALID_TOKEN':
+        return response_builder.invalid_token()
+    if e.description == 'NO_API_KEY':
+        return response_builder.invalid_api_key()
